tests/data/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-np-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana-k8s
  ports:
  - name: gf-sp
    protocol: TCP
    port: 3030
    targetPort: 3000
    nodePort: 30123
