tests/data/prometheus_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-np-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus-k8s
  ports:
  - name: prom-sp
    protocol: TCP
    port: 9092
    targetPort: 9090
    nodePort: 31337
