tests/data/test-multi-nic-ipam.yaml
apiVersion: "k8s.cni.cncf.io/v1"
kind: NetworkAttachmentDefinition
metadata:
  name: test-multi-nic-ipam
spec:
  config: |
    {
      "cniVersion": "0.3.1",
      "type": "bridge",
      "ipam": {
        "type": "kube-ovn",
        "server_socket": "/run/openvswitch/kube-ovn-daemon.sock",
        "provider": "test-multi-nic-ipam.default"
      }
    }
---
apiVersion: kubeovn.io/v1
kind: Subnet
metadata:
  name: test-multi-nic-ipam
spec:
  protocol: IPv4
  provider: test-multi-nic-ipam.default
  cidrBlock: 10.123.123.0/24
  gateway: 10.123.123.1
  excludeIps:
  - 10.123.123.1..10.123.123.10
---
apiVersion: v1
kind: Pod
metadata:
  name: test-multi-nic-ipam
  annotations:
    k8s.v1.cni.cncf.io/networks: test-multi-nic-ipam
spec:
  containers:
  - name: ubuntu
    image: ghcr.io/canonical/cdk/ubuntu:focal
    command: ["sleep", "inf"]
